--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -179,7 +179,9 @@
     <string name="charging_statue_a">电流(A)</string>
     <string name="charging_statue_v">电压(V)</string>
     <string name="charging_statue_soc">SOC</string>
-
+    <string name="charging_statue_fail">开始充电失败</string>
+    <string name="charging_statue_please_check">请检查桩与车的连接状态....</string>
+    
     <!--支付-->
     <string name="pay">支付</string>
     <string name="pay_electronic">充电量</string>
