--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="km">KM</string>
     <string name="yuan">元</string>
     <string name="yuan_du">元&#047;度</string>
+    <string name="du">度</string>
 
     <!--action-->
     <string name="action_get_code">获取验证码</string>
@@ -124,6 +125,8 @@
     <string name="home_charge_direct_">直流：</string>
     <string name="home_charge_alternating_">交流：</string>
     <string name="home_charge_hint_">个空闲</string>
+    <string name="home_charge_time_out">您的预约已超时，请重新预约</string>
+
     <!--搜索-->
     <string name="search_history">搜索历史</string>
     <string name="search_history_clear">清空搜索历史</string>
@@ -158,7 +161,8 @@
     <string name="guilding_park_map">园区地图</string>
     <string name="guilding_get_location">定位中，稍后再试...</string>
     <string name="guilding_no_end">终点未设置</string>
-
+    <string name="guilding_cancel_appointment_hint">您确定要取消充电预约？</string>
+    <string name="guilding_check_not_appointment">您导航目的地与预约中的目的地不同，是否继续导航？</string>
     <!--扫码充电-->
     <string name="scan_charging">充电</string>
     <string name="scan_charging_hint">将充电桩上的二维码放入框内，即可享受充电服务</string>
