publish the comment content and show the comment info

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -284,4 +284,6 @@
     <string name="useing_no_charge">使用中（未充电）</string>
     <string name="appoingment_ing">预约中</string>
     <string name="stop_server">停止服务</string>
+    <string name="please_input_key_value">请输入关键词查询</string>
+    <string name="search_station_destation">目的地</string>
 </resources>
