--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -286,4 +286,5 @@
     <string name="stop_server">停止服务</string>
     <string name="please_input_key_value">请输入关键词查询</string>
     <string name="search_station_destation">目的地</string>
+    <string name="charging_end_fail">充电结束失败</string>
 </resources>
