--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -294,4 +294,5 @@
     <string name="rest_pwd_success">重置密码成功！</string>
     <string name="pwd2_not_agumention">两次密码不一致！</string>
     <string name="account_pwd_fault">账号或密码错误，请重新输入</string>
+    <string name="request_refuse">请求被拒绝！</string>
 </resources>
